[gd_scene load_steps=6 format=3 uid="uid://b6rxaqh0dadam"]

[ext_resource type="Script" path="res://BibleViwer.gd" id="1_eqao6"]
[ext_resource type="PackedScene" uid="uid://dmfev8bm6xoo4" path="res://Scenes/ChapterTab.tscn" id="2_rn5h4"]

[sub_resource type="GDScript" id="GDScript_jd8xs"]
script/source = "extends LineEdit

func _ready() -> void:
	gui_input.connect(_on_gui_input)
	
	
func _on_gui_input(event:InputEvent) -> void:
	if event is InputEventKey:
		if event.pressed:
			if event.keycode == KEY_DOWN:
				if get_node(focus_neighbor_bottom).is_visible_in_tree():
					get_node(focus_neighbor_bottom).grab_focus()
"

[sub_resource type="InputEventKey" id="InputEventKey_w3r31"]
keycode = 4194322

[sub_resource type="Shortcut" id="Shortcut_apwqq"]
events = [SubResource("InputEventKey_w3r31")]

[node name="BibleViewer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_eqao6")
chapter_tab = ExtResource("2_rn5h4")

[node name="ChapterTabs" type="MarginContainer" parent="."]
unique_name_in_owner = true
offset_left = 5.0
offset_top = 5.0
offset_right = 1147.0
offset_bottom = 643.0

[node name="Window" type="Window" parent="."]
title = "Bible Reader Controls"
position = Vector2i(2000, 60)
size = Vector2i(334, 241)
current_screen = 1
wrap_controls = true

[node name="MarginContainer" type="MarginContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 1147.0
offset_bottom = 643.0

[node name="TabControls" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
offset_right = 1142.0
offset_bottom = 31.0

[node name="ScrollContainer" type="ScrollContainer" parent="Window/MarginContainer/VBoxContainer/TabControls"]
offset_right = 1049.0
offset_bottom = 31.0
size_flags_horizontal = 3
follow_focus = true
vertical_scroll_mode = 0

[node name="ChapterTabBar" type="TabBar" parent="Window/MarginContainer/VBoxContainer/TabControls/ScrollContainer"]
unique_name_in_owner = true
offset_right = 1049.0
size_flags_horizontal = 3
clip_tabs = false
tab_close_display_policy = 2

[node name="NewTab" type="Button" parent="Window/MarginContainer/VBoxContainer/TabControls"]
offset_left = 1053.0
offset_right = 1142.0
offset_bottom = 31.0
size_flags_vertical = 0
text = "+ New Tab"

[node name="BookSearchContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 1142.0
offset_bottom = 66.0

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer"]
offset_right = 569.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="SearchBook" type="LineEdit" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer"]
unique_name_in_owner = true
offset_right = 569.0
offset_bottom = 31.0
focus_neighbor_right = NodePath("../../SearchChapter")
focus_neighbor_bottom = NodePath("../FuzzyBooks/VBoxContainer/FuzzyBook1")
focus_next = NodePath("../../SearchChapter")
text = "Genesis"
placeholder_text = "Book"
script = SubResource("GDScript_jd8xs")

[node name="FuzzyBooks" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
offset_top = 35.0
offset_right = 569.0
offset_bottom = 67.0

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/FuzzyBooks"]
offset_right = 569.0
offset_bottom = 32.0
theme_override_constants/separation = 0

[node name="FuzzyBook1" type="Button" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/FuzzyBooks/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_right = 569.0
offset_bottom = 8.0
shortcut = SubResource("Shortcut_apwqq")
shortcut_context = NodePath("../../../SearchBook")
flat = true
alignment = 0

[node name="FuzzyBook2" type="Button" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/FuzzyBooks/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_top = 8.0
offset_right = 569.0
offset_bottom = 16.0
shortcut_context = NodePath("../../../SearchBook")
flat = true
alignment = 0

[node name="FuzzyBook3" type="Button" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/FuzzyBooks/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_top = 16.0
offset_right = 569.0
offset_bottom = 24.0
shortcut_context = NodePath("../../../SearchBook")
flat = true
alignment = 0

[node name="FuzzyBook4" type="Button" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/FuzzyBooks/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_top = 24.0
offset_right = 569.0
offset_bottom = 32.0
focus_neighbor_bottom = NodePath(".")
shortcut_context = NodePath("../../../SearchBook")
flat = true
alignment = 0

[node name="SearchChapter" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer"]
unique_name_in_owner = true
offset_left = 573.0
offset_right = 1142.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="SearchVerse" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/BookSearchContainer"]
unique_name_in_owner = true
visible = false
offset_left = 764.0
offset_right = 1142.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 200.0
value = 1.0

[node name="PageLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 1142.0
offset_bottom = 96.0
text = "Page Resolution"

[node name="PageResolutionControls" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
offset_top = 100.0
offset_right = 1142.0
offset_bottom = 131.0

[node name="PageResolutionX" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/PageResolutionControls"]
unique_name_in_owner = true
offset_right = 516.0
offset_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 4000.0
value = 640.0
suffix = "px"

[node name="PageResolutionY" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/PageResolutionControls"]
unique_name_in_owner = true
offset_left = 520.0
offset_right = 1037.0
offset_bottom = 31.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 4000.0
value = 480.0
suffix = "px"

[node name="PageResiazable" type="CheckBox" parent="Window/MarginContainer/VBoxContainer/PageResolutionControls"]
unique_name_in_owner = true
offset_left = 1041.0
offset_right = 1142.0
offset_bottom = 31.0
button_pressed = true
text = "Resizable"

[node name="FontLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
offset_top = 135.0
offset_right = 1142.0
offset_bottom = 161.0
text = "Font"

[node name="FontControls" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
offset_top = 165.0
offset_right = 1142.0
offset_bottom = 196.0

[node name="FontSizeLabel" type="Label" parent="Window/MarginContainer/VBoxContainer/FontControls"]
self_modulate = Color(0.678431, 0.678431, 0.678431, 1)
offset_top = 2.0
offset_right = 70.0
offset_bottom = 28.0
text = "Font Size"

[node name="FontSize" type="SpinBox" parent="Window/MarginContainer/VBoxContainer/FontControls"]
unique_name_in_owner = true
offset_left = 74.0
offset_right = 157.0
offset_bottom = 31.0
min_value = 1.0
value = 16.0
suffix = "px"

[node name="PanelContainer" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_top = 200.0
offset_right = 1142.0
offset_bottom = 638.0
size_flags_vertical = 3

[connection signal="tab_changed" from="Window/MarginContainer/VBoxContainer/TabControls/ScrollContainer/ChapterTabBar" to="." method="_on_chapter_tab_bar_tab_changed"]
[connection signal="tab_close_pressed" from="Window/MarginContainer/VBoxContainer/TabControls/ScrollContainer/ChapterTabBar" to="." method="_on_tab_bar_tab_close_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/TabControls/NewTab" to="." method="_on_new_tab_pressed"]
[connection signal="gui_input" from="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/SearchBook" to="Window/MarginContainer/VBoxContainer/BookSearchContainer/VBoxContainer/SearchBook" method="_on_search_book_gui_input"]
[connection signal="value_changed" from="Window/MarginContainer/VBoxContainer/PageResolutionControls/PageResolutionX" to="." method="_on_page_resolution_x_value_changed"]
[connection signal="value_changed" from="Window/MarginContainer/VBoxContainer/PageResolutionControls/PageResolutionY" to="." method="_on_page_resolution_y_value_changed"]
[connection signal="toggled" from="Window/MarginContainer/VBoxContainer/PageResolutionControls/PageResiazable" to="." method="_on_page_resiazable_toggled"]
[connection signal="value_changed" from="Window/MarginContainer/VBoxContainer/FontControls/FontSize" to="." method="_on_font_size_value_changed"]
